chore: Swagger 명세와 컨트롤러 스펙 정합성을 맞춘 후 스웨거 내 userUuid 쿼리 파라미터 제거
